--- a/Challenges_Html_Css/stylesheet.css
+++ b/Challenges_Html_Css/stylesheet.css
@@ -1,6 +1,6 @@
 /* Varuablees */
 :root {
-      --main-color: #01546B;
+      --main-color: #026B8A;
       --scecondery-color: #0AC6FC;
   }
   /* End */
@@ -12,6 +12,12 @@
   }
   body {
         font-family: sans-serif;
+  }
+  .componens {
+        text-align: center;
+        padding: 50px 50px;
+        height: 800px;
+        width: 100%;
   }
   /* End  Global Rules */
   /* start header */
@@ -258,3 +264,254 @@
   }
   /* End Text & Button */
   /* end header */
+  /* Start Frsit Section */
+  .f-bar {
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: space-evenly;
+        align-items: center;
+        background-color: var(--main-color);
+        width: 100%;
+        height: 145px;
+        padding: 0 80px 0 80px;
+  }
+  .f-bar .call {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        width: 14%;
+        align-items: center;
+  }
+  .f-bar .mail {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        width: 15%;
+        align-items: center;
+  }
+  .f-bar .time {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        width: 14%;
+        align-items: center;
+  }
+  .f-bar .loca {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        width: 16%;
+        align-items: center;
+  }
+  .f-bar .font-a {
+        font-size: 20px;
+        font-weight: bold;
+        background-color: rgba(255,255,255,.2);
+        width: 45px;
+        height: 45px;
+        text-align: center;
+        line-height: 2.4;
+        border-radius: 50%;
+        color: var(--scecondery-color);
+        cursor: pointer;
+        transition: 0.4s;
+  }
+  .f-bar .font-a i {
+        transition: 0.5s;
+  }
+  .f-bar .font-a:hover {
+        background-color: var(--scecondery-color);
+        color: #FFFFFF
+  }
+  
+  .f-bar .text {
+        color: #FFFFFF;
+  }
+  .f-bar .text h4 {
+        font-size: 17px;
+        padding-bottom: 10px;
+  }
+  .f-bar .text p span {
+        color: var(--scecondery-color);
+  }
+  /* End Frsit Section */
+  /* Start Second Section */
+  .mauris {
+        position: relative;
+  }
+  .mauris .heading {
+        position: absolute;
+        top: -120px;
+        left: 41%;
+  }
+  .mauris .heading p {
+        font-size: 12px;
+        text-align: center;
+        margin-bottom: 6px;
+        opacity: 75%;
+  }
+  .mauris .heading h3 {
+        font-size: 20px;
+        font-weight: normal;
+        opacity: 75%;
+  }
+  .boxs {
+        display: flex;
+        flex-flow: row wrap;
+        width: 1200px;
+        justify-content: center;
+        align-items: center;
+        flex-direction: row;
+        flex-wrap: wrap;
+        margin: 12% auto;
+        padding-top: 55px;
+  }
+  .boxs .box {
+        width: 360px;
+        margin-top: 35px;
+        border: 1px solid var(--scecondery-color);
+        position: relative;
+        padding: 40px 20px;
+        margin: 20px;
+        cursor: pointer;
+  }
+  .boxs .box:hover  {
+        background-color: var(--main-color);
+  }
+  .boxs .box h4 {
+        margin-bottom: 20px;
+        font-size: 22px;
+        opacity: 75%;
+        transition: 1s;
+  }
+  .boxs .box:hover h4 {
+        color: #FFFFFF;
+        opacity: 100%;
+  }
+  .boxs .box p {
+        margin-bottom: 20px;
+        font-size: 15px;
+        line-height: 1.4;
+        opacity: 75%;
+        transition: 1s;
+  }
+  .boxs .box:hover p {
+        color: #FFFFFF;
+        opacity: 100%;
+  }
+  .boxs .box a {
+        text-decoration: none;
+        color: #000;
+        opacity: 75%;
+        transition: 0.5s;
+  }
+    .boxs .box:hover a  {
+        color: var(--scecondery-color);
+        opacity: none;
+  }
+  .boxs .icons {
+        background-color: #03566f;
+        width: 50px;
+        height: 50px;
+        text-align: center;
+        line-height: 2;
+        font-size: 30px;
+        color: #fff;
+        position: absolute;
+        top: -25px;
+        left: 80%;
+        transition: 0.5s;
+  }
+  .box:hover .icons {
+        background-color:var(--scecondery-color);
+  }
+  /* End Second Section */
+  /* Start Section Three */
+  .componens {
+        background-image: url("../images/background-02.jpeg");
+        background-size: cover;
+        background-position-x: center;
+        height: 80vh;
+  }
+  .componens .heading {
+    padding-top: 30px;
+  }
+  .componens .heading h3 {
+        color: #FFFFFF;
+        font-size: 20px
+  }
+  .componens .heading p {
+        color: #FFFFFF;
+        font-size: 12px
+  }
+  .post {
+        display: flex;
+        flex-direction: row-reverse;
+        text-align: start;
+        background-color: #fff;
+        padding: 50px;
+        margin: 8% auto;
+        position: relative;
+        width: 1145px;
+  }
+  .post .photo img {
+        width: 317.47px;
+        height: 359.42px;
+  }
+  .post .commnet {
+        position: absolute;
+        left: 4%;
+  }
+  .post .commnet h4 {
+        font-size: 20px;
+  }
+  .post .commnet p:first-of-type {
+        font-size: 15px;
+        padding-top: 10px;
+        width: 600px;
+        line-height: 1.6;
+  }
+  .post .commnet p:last-of-type {
+        font-size: 15px;
+        padding-top: 10px;
+        width: 600px;
+        line-height: 1.6;
+  }
+  .post .commnets {
+        position: absolute;
+        bottom: 10%;
+        left: 6%;
+        width: 600px;
+        height: 250px;
+        display: flex;
+        flex-flow: column wrap;
+        padding-top: 42px;
+  }
+  .post .commnets .num {
+        position: relative;
+        padding-top: 8px
+  }
+  .post .commnets .number {
+        width: 24px;
+        height: 24px;
+        border-radius: 50%;
+        background-color: var(--scecondery-color);
+        color: #fff;
+        text-align: center;
+        transform: translateY(10px);
+        left: -28px;
+        position: relative;
+        top: 11px;
+        line-height: 1.6;
+        font-size: 15px;
+        transition: 0.6s;
+  }
+  .post .commnets .number:hover {
+        background-color: #03566f;
+  }
+  .post .commnets span {
+        font-size: 15px;
+        padding: 5px;
+  }
+  /* End Section Three */
+  
